[package]
name = "keter-reactor"
version = "0.1.0"
edition = "2021"
authors = ["John Nunley <dev@notgull.net>"]

[[test]]
name = "reactor"
path = "tests/reactor.rs"
harness = false

[dependencies]
async-io = "2"
event-listener = "4.0.1"
futures-lite = { version = "2.1.0", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies.rustix]
version = "0.38.28"
default-features = false
features = ["thread", "std", "process"]

[dev-dependencies]
macro_rules_attribute = "0.2.0"
